--- a/index.html
+++ b/index.html
@@ -1,38 +1,9 @@
-<!doctype html>
-<html>
-    <head>
-        <title>example 1-2</title>
-    </head>
-    <body>
-        <H2>example 1-2</H2>
-        <HR>
-        example 1-2
-    </body>
-</html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap" rel="stylesheet">
 
-<!doctype html>
-<html> 
-    <head>
-        <title>Example: 2-1</title>
-    </head>
-    <body>
-        <h1>example 2-1</h1>
-        <h2>나는 지금 양자 메트롤로지 연구실에서 연구하고 있고 나는 이렇게 살 고 있 다</h2>
-        
-        <p>hello world</p>
-        <p>hello
-            world
-        </p>
-        <p>hello<br>world</p>
-        <pre>
-            hello world
-            hello
-                world
-        </pre>
-        <pre>
-            <h2>hello
-                    world
-            </h2>
-        </pre>
-    </body>
-</html>
+<a-hole>
+  <canvas class="js-canvas"></canvas>
+  <div class="aura"></div>
+  <div class="overlay"></div>
+</a-hole><!-- .a-hole -->
