--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-   <title>도서쇼핑몰</title>
+   <title>박성현의 끄적끄적 상자</title>
    <style type="text/css"> 
       html,body{width:100%;height:70%}
       html{overflow-y:scroll}
@@ -37,7 +37,7 @@
    <div id="container">
    <header>
       <hgroup>
-         <h1>책읽는 사람이 세상을 바꾼다!!</h1>
+         <h1>책읽는 사람이 세상을 바꾼다</h1>
          <h2>by 홍길동</h2>
       </hgroup>
    </header>
