--- a/index.html
+++ b/index.html
@@ -37,19 +37,15 @@
    <div id="container">
    <header>
       <hgroup>
-         <h1>책읽는 사람이 세상을 바꾼다</h1>
-         <h2>by 홍길동</h2>
+         <h1>너네가 세상을 아느냐</h1>
+         <h2>by 박성현</h2>
       </hgroup>
    </header>
    <nav>
       <ul>
-         <li><span>국내도서</span></li>
-         <li><span>서양도서</span></li>
-         <li><span>베스트셀러</span></li>
-         <li><span>e-book</span></li>
-         <li><span>아동전집</span></li>
-         <li><span>이벤트</span></li>
-         <li><span>문화행사</span></li>
+         <li><span>자기소개</span></li>
+         <li><span>해낸 것?</span></li>
+         <li><span>좋아하는 리스트</span></li>
       </ul>
    </nav>
    <section> 
