--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                                              sans-serif;font-size:13px;color:#383d41}
       body{background-color:#fff}
       li{list-style:none}
-      #container{width:760px;margin:0 auto}
-      header{margin-top:20px;padding:20px;border:1px solid #000;background:#6600cc }
+      #container{width:1000px;margin:0 auto}
+      header{margin-top:20px;padding:20px;border:1px solid #000;background:#99ccff }
       hgroup{overflow:hidden;padding-bottom:20px}
       hgroup h1{float:left;font-size:18px;color:#fff}
       hgroup h2{float:right;font-weight:normal;color:#fff;opacity:0.8}
