--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                                              sans-serif;font-size:13px;color:#383d41}
       body{background-color:#fff}
       li{list-style:none}
-      #container{width:1000px;margin:0 auto}
+      #container{width:600px;margin:0 auto}
       header{margin-top:20px;padding:20px;border:1px solid #000;background:#99ccff }
       hgroup{overflow:hidden;padding-bottom:20px}
       hgroup h1{float:left;font-size:18px;color:#fff}
@@ -37,15 +37,15 @@
    <div id="container">
    <header>
       <hgroup>
-         <h1>너네가 세상을 아느냐</h1>
+         <h1>너네가 세상을 아느냐<br></h1>
          <h2>by 박성현</h2>
       </hgroup>
    </header>
    <nav>
       <ul>
-         <li><span>자기소개</span></li>
-         <li><span>해낸 것?</span></li>
-         <li><span>좋아하는 리스트</span></li>
+         <li><span>자기소개</span><br></li>
+         <li><span>해낸 것?</span><br></li>
+         <li><span>좋아하는 리스트</span><br></li>
       </ul>
    </nav>
    <section> 
