--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                                              sans-serif;font-size:13px;color:#383d41}
       body{background-color:#fff}
       li{list-style:none}
+      <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
+      
       #container{width:600px;margin:0 auto}
       header{margin-top:20px;padding:20px;border:1px solid #000;background:#99ccff }
       hgroup{overflow:hidden;padding-bottom:20px}
