--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
 <meta charset="UTF-8">
    <title>박성현의 끄적끄적 상자</title>
+   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
    <style type="text/css"> 
       html,body{width:80%;height:60%}
       html{overflow-y:scroll}
       body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,form,fieldset,p,button{margin:0;padding:0}
-      body,h1,h2,h3,h4,input,button{font-family:NanumGothicWeb,verdana,dotum, 
-                                             sans-serif;font-size:13px;color:#383d41}
+      body,h1,h2,h3,h4,input,button{font-family: Pretendard, -apple-system, BlinkMacSystemFont, 
+         system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
+      font-size:13px;
+      color:#383d41;}
       body{background-color:#fff}
       li{list-style:none}
-      <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
       
       #container{width:600px;margin:0 auto}
       header{margin-top:20px;padding:20px;border:1px solid #000;background:#99ccff }
