--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
          system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
       font-size:13px;
       color:#383d41;}
-      body{background-color:#fff}
+      body{
+        background-color: #fff;
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
       li{list-style:none}
       
       #container{width:600px;margin:0 auto}
