--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
       body{
         background-color: #fff;
         min-height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: grid;
+        place-items: center;
       }
       li{list-style:none}
       
