--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
       hgroup{overflow:hidden;padding-bottom:20px}
       hgroup h1{float:left;font-size:18px;color:#fff}
       hgroup h2{float:right;font-weight:normal;color:#fff;opacity:0.8}
+
+      nav { text-align: center;}
+      nav ul {display: inline-block;
+              padding: 0;
+              margin: 0; }
       nav{clear:both;overflow:hidden}
       nav li{float:left;padding-right:5px;font-family:verdana}
       nav li span{display:inline-block;padding:3px 10px;
                                       border-radius:5px;background-color:#fff}
+      
       section{float:left;width:518px;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
               solid #330000;line-height:20px;background:#99ccff  }
