--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       }
       li{list-style:none}
       
-      #container{width:100%; margin:0; box-sizing:border-box; }
-      header{margin-top:20px;padding:20px;border:1px solid #000;background:#ffffff }
+      #container{width:50%; margin:0; box-sizing:border-box; }
+      header{margin-top:10px;padding:20px;border:1px solid #000;background:#9fffff }
       hgroup{overflow:hidden;padding-bottom:20px}
       hgroup h1{float:left;font-size:18px;color:#fff}
       hgroup h2{float:right;font-weight:normal;color:#fff;opacity:0.8}
