--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       li{list-style:none}
       
       #container{width:50%; margin:0; box-sizing:border-box; }
-      header{margin-top:10px;padding:20px;border:1px solid #000;background:#9fffff }
+      header{margin-top:10px;padding:20px;border:1px solid #000;background: transparent; }
       hgroup{overflow:hidden;padding-bottom:20px}
       hgroup h1{float:left;font-size:18px;color:#fff}
       hgroup h2{float:right;font-weight:normal;color:#fff;opacity:0.8}
@@ -34,17 +34,17 @@
       nav{clear:both;overflow:hidden}
       nav li{float:left;padding-right:5px;font-family:verdana}
       nav li span{display:inline-block;padding:3px 10px;
-                                      border-radius:5px;background-color:#fff}
+                                      border-radius:5px;background-color: transparent}
       
       section{float:left;width:518px;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
-              solid #330000;line-height:20px;background:#99ccff  }
+              solid #330000;line-height:20px;background: transparent}
       article{margin-bottom:10px}
       article h3{font-size:16px}
       aside{float:right;width:163px;padding:10px;margin-top:15px;border:
-                         1px solid #330000;line-height:20px ;background:#99ccff }
+                         1px solid #330000;line-height:20px ;background: transparent}
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
-      footer{clear:both;padding:20px;border:1px solid #330000 ;background:#99ccff;
+      footer{clear:both;padding:20px;border:1px solid #330000 ;background: transparent;
               text-align:center }
   </style> 
 </head>
@@ -65,29 +65,29 @@
    </nav>
    <section> 
       <article>
-         <h1> 첫 번째 도서 제목 </h1>
-         <p> 첫 번째 도서의 내용 </p>
+         <h1> 일기장? </h1>
+         <p> 내가 한 것들을 적는 란 </p>
       </article>
       <article>
-         <h1> 두 번째 도서 제목 </h1>
-         <p> 두 번째 도서의 내용 </p>
+         <h1> 해야할 것 리스트 </h1>
+         <p> 매일 뭐할지 적는 리스트 </p>
       </article>
       <article>
-         <h1> 세번째 도서 제목 </h1>
-         <p> 세번째 도서의 내용 </p>
+         <h1> 이제는 더 이상 물러날 곳이 없다 </h1>
+         <p> 음 </p>
       </article>
    </section>
    <aside>
-      <p class="ad">문화 강좌 광고</p>
+      <p class="ad">싫어!</p>
       <ul>
          <li><b>html5강좌</b></li>
-         <li><b>컴퓨터강좌</b></li>
-         <li><b>독서강좌</b></li>
+         <li><b>html5연습</b></li>
+         <li><b>연습</b></li>
       </ul>
    </aside>
    <footer>
-      이메일:admin@test.com<br>
-      회사주소:서울시 강동구<br>
+      이메일:tjdgus5160@chungbuk.ac.kr<br>
+      회사주소: 충북<br>
       찾아오는 길:<a href="#">약도</a>
    </footer>
    </div>
