--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       li{list-style:none}
       
       #container{width:80%; margin:0; box-sizing:border-box; }
-      header{margin-top:10px;padding:2px;border:1px solid #000;background: transparent; }
+      header{margin-top:10px;padding:2px;border:1px ;background: transparent; }
       hgroup{overflow:hidden;padding-bottom:20px}
       hgroup h1{float:left;font-size:18px;color:#fff}
       hgroup h2{float:right;font-weight:normal;color:#fff;opacity:0.8}
