--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       li{list-style:none}
       
       #container{width:80%; margin:0; box-sizing:border-box; }
-      header{margin-top:10px;padding:2px;border:1px ;background: transparent; }
+      header{margin-top:20px;padding:20px;border:1px solid #000;background: transparent; border-width: 10px;}
       hgroup{overflow:hidden;padding-bottom:20px}
-      hgroup h1{float:left;font-size:18px;color:#fff}
-      hgroup h2{float:right;font-weight:normal;color:#fff;opacity:0.8}
+      hgroup h1{float:left;font-size:18px;color:#000}
+      hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
 
       nav { text-align: center;}
       nav ul {display: inline-block;
