--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
               margin: 0; }
       nav{clear:both;overflow:hidden}
       nav li{float:left;padding-right:5px;font-family:verdana}
-      nav li span{display:inline-block;padding:3px 10px;
-                                      border-radius:5px;background-color: transparent}
+      nav li span{display:inline-block;padding:10px 10px;
+                                      border-radius:5px;background-color: transparent;
+                 border:1px solid #000; border-width: 5px;}
       
       section{float:left;width:518px;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
