--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       /* label을 버튼처럼 스타일링 */
       .nav-toggle-label {
         display: inline-block;
-        padding: 8px 16px;
-        background: #99ccff;
-        border: 1px solid #333;
+        padding: 16px 16px;
+        background: transparent;
+        border: 2px solid #333;
         border-radius: 5px;
         cursor: pointer;
         margin-bottom: 10px;
