--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </style> 
 </head>
 <body>
-   <img src="https://tjdgus5160.github.io/IQM spark.png" alt="양자컴퓨터">
+   <img src="https://tjdgus5160.github.io/IQM Spark.png" alt="양자컴퓨터">
    <div id="container">
    <header>
       <hgroup>
