--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       const img = document.getElementById('rotated-image');
 
       setInterval(function() { rotation = (rotation+2) % 360; // 2도씩 증가, 속도 조절 가능
-                              img.style.transform = 'rotate(${rotation}deg)';
+                              img.style.transform = `rotate(${rotation}deg)`;
                              }, 20); // 20ms마다 실행 (속도 조절 가능)
    </script>
    
