--- a/index.html
+++ b/index.html
@@ -88,12 +88,6 @@
 <input type="checkbox" id="nav-toggle" style="display:none;">
    <nav class="nav-menu">
       <ul id="main-nav" class="nav-menu">
-         <script>
-            const nav = document.getElementById('main-nav');
-            nav.addEventListener('mouseover', function() { nav.style.display='block'; });
-            nav.addEventListener('mouseout', function() { nav.style.display='none'; });
-      
-         </script>
          <li><span>자기소개</span></li>
          <li><span>해낸 것?</span></li>
          <li><span>좋아하는 리스트</span></li>
@@ -127,5 +121,15 @@
       찾아오는 길:<a href="#">약도</a>
    </footer>
    </div>
+     <!-- 자바스크립트는 여기! -->
+  <script>
+    const nav = document.getElementById('main-nav');
+    nav.addEventListener('mouseover', function() {
+      nav.style.display = 'block';
+    });
+    nav.addEventListener('mouseout', function() {
+      nav.style.display = 'none';
+    });
+  </script>
 </body>
 </html>
