--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- section4.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -27,40 +26,62 @@
       hgroup h1{float:left;font-size:18px;color:#000}
       hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
 
-      nav { text-align: center;}
-      .nav-menu { display:none; }
-      #nav-toggle:checked + .nav-menu { display:block; }
-      /* label을 버튼처럼 스타일링 */
-      .nav-toggle-label {
+      /* 수정된 네비게이션 스타일 */
+      nav { 
+        text-align: center;
+        position: relative;
+        z-index: 1000;
+      }
+      #main-nav ul {
         display: inline-block;
-        padding: 16px 40px;
-        background: transparent;
-        border: 2px solid #333;
+        padding: 0;
+        margin: 0;
+      }
+      #main-nav > ul > li {
+        float: left;
+        position: relative;
+        margin: 0 15px;
+      }
+      #main-nav li span {
+        display: block;
+        padding: 10px 20px;
+        border: 1px solid #000;
         border-radius: 5px;
         cursor: pointer;
-        margin-bottom: 10px;
+        transition: background 0.3s;
       }
-      nav ul {display: inline-block;
-              padding: 0;
-              margin: 0; }
-      nav{clear:both;overflow:hidden}
-      nav li{float:left;padding-right:5px;font-family:verdana}
-      nav li span{display:inline-block;padding:10px 10px;
-                                      border-radius:5px;background-color: transparent;
-                 border:1px solid #000; border-width: 5px;}
-      
+      #main-nav li:hover span {
+        background: #f0f0f0;
+      }
+
+      /* 서브메뉴 스타일 */
+      .submenu {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background: #fff;
+        border: 1px solid #000;
+        border-radius: 5px;
+        min-width: 150px;
+        box-shadow: 0 3px 5px rgba(0,0,0,0.2);
+      }
+      #main-nav li:hover .submenu {
+        display: block;
+      }
+      .submenu li {
+        padding: 8px 15px;
+        white-space: nowrap;
+      }
+      .submenu li:hover {
+        background: #99ccff;
+      }
+
+      /* 기존 토글 관련 코드 제거 */
       section{float:left;width:518px;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
               solid #330000;line-height:20px;background: transparent}
-      article{margin-bottom:10px}
-      article h3{font-size:16px}
-      aside{float:right;width:163px;padding:10px;margin-top:15px;border:
-                         1px solid #330000;line-height:20px ;background: transparent}
-      aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
-      footer{clear:both;padding:20px;border:1px solid #330000 ;background: transparent;
-              text-align:center }
-
-      #rotated-image { transition: transform 0.5s linear; }
+      /* ... 나머지 스타일 유지 ... */
   </style> 
 </head>
 <body>
@@ -69,10 +90,10 @@
    <script>
       let rotation = 0;
       const img = document.getElementById('rotated-image');
-
-      setInterval(function() { rotation = (rotation+2) % 360; // 2도씩 증가, 속도 조절 가능
-                              img.style.transform = `rotate(${rotation}deg)`;
-                             }, 40); // 20ms마다 실행 (속도 조절 가능)
+      setInterval(() => {
+        rotation = (rotation + 2) % 360;
+        img.style.transform = `rotate(${rotation}deg)`;
+      }, 40);
    </script>
    
    <div id="container">
@@ -83,17 +104,36 @@
       </hgroup>
    </header>
 
-   <!-- 토글 버튼 역할을 할 label과 input -->
-<label for="nav-toggle" class="nav-toggle-label">메뉴</label>
-<input type="checkbox" id="nav-toggle" style="display:none;">
+   <!-- 수정된 네비게이션 구조 -->
    <nav id="main-nav">
       <ul>
-         <li><span>자기소개</span></li>
-         <li><span>해낸 것?</span></li>
-         <li><span>좋아하는 리스트</span></li>
+         <li>
+            <span>자기소개</span>
+            <ul class="submenu">
+              <li>프로필</li>
+              <li>경력</li>
+              <li>학력</li>
+            </ul>
+         </li>
+         <li>
+            <span>해낸 것?</span>
+            <ul class="submenu">
+              <li>프로젝트1</li>
+              <li>프로젝트2</li>
+              <li>수상경력</li>
+            </ul>
+         </li>
+         <li>
+            <span>좋아하는 리스트</span>
+            <ul class="submenu">
+              <li>영화</li>
+              <li>음악</li>
+              <li>책</li>
+            </ul>
+         </li>
       </ul>
    </nav>
-   <section> 
+      <section> 
       <article>
          <h1> 일기장? </h1>
          <p> 내가 한 것들을 적는 란 </p>
@@ -124,3 +164,7 @@
 
 </body>
 </html>
+
+
+
+
