--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
              margin-bottom:20px;padding:20px;border:1px 
               solid #330000;line-height:20px;background: transparent}
       /* ... 나머지 스타일 유지 ... */
+      section{float:left;width:518px;margin-top:15px;
+             margin-bottom:20px;padding:20px;border:1px 
+              solid #330000;line-height:20px;background: transparent}
+      article{margin-bottom:10px}
+      article h3{font-size:16px}
+      aside{float:right;width:163px;padding:10px;margin-top:15px;border:
+                         1px solid #330000;line-height:20px ;background: transparent}
+      aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
+      footer{clear:both;padding:20px;border:1px solid #330000 ;background: transparent;
+              text-align:center }
   </style> 
 </head>
 <body>
