--- a/index.html
+++ b/index.html
@@ -98,9 +98,23 @@
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
       footer{clear:both;padding:20px;border:1px solid #330000 ;background: transparent;
               text-align:center }
+
+      .video-center {
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         height:100vh;
+      }
   </style> 
 </head>
 <body> 
+   <video id="myVideo" width="960" height="720" controls autoplay loop muted>
+     <source src="https://tjdgus5160.github.io/KakaoTalk_20250420_022556182.mp4" type="video/mp4">
+     브라우저가 video 태그를 지원하지 않습니다.
+   </video>
+   <script>
+      document.getElementById('myVideo').playbackRate = 5; // 5배속 재생
+   </script>
    
    <div id="container">
    <header>
@@ -109,11 +123,6 @@
          <h2>by 박성현</h2>
       </hgroup>
    </header>
-
-   <video width="640" height="360" autoplay loop muted controls>
-     <source src="https://tjdgus5160.github.io/KakaoTalk_20250420_022556182.mp4" type="video/mp4">
-     브라우저가 video 태그를 지원하지 않습니다.
-   </video>
 
    <!-- 수정된 네비게이션 구조 -->
    <nav id="main-nav">
