--- a/index.html
+++ b/index.html
@@ -159,8 +159,16 @@
          <p> 내가 한 것들을 적는 란 </p>
       </article>
       <article>
-         <h1> 해야할 것 리스트 </h1>
-         <p> 매일 뭐할지 적는 리스트 </p>
+         <h1> 할 수 있는거 </h1>
+         <p> Rydberg electromagnetic induced transparency spectroscopy </p>
+         <p> Saturation absorption spectroscopy </p>
+         <p> Python PID coding </p>
+         <p> optical transfer cavity (진행중) </p>
+         <p> Three-level density matrix calculation </p>
+         <p> Blender 3D (setup image, video) </p>
+         <p> html, css, javascript (진행중) </p>
+         <p> LabVIEW (진행중) </p>
+         <p> FPGA (예정) </p>
       </article>
       <article>
          <h1> 이제는 더 이상 물러날 곳이 없다 </h1>
