--- a/index.html
+++ b/index.html
@@ -99,21 +99,20 @@
       footer{clear:both;padding:20px;border:1px solid #330000 ;background: transparent;
               text-align:center }
 
-      .video-center {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         height:10vh;
+      .video.center {
+         display: block;
+         margin-left:auto;
+         margin-right:auto;
       }
   </style> 
 </head>
 <body> 
-   <video id="myVideo" width="960" height="720" controls autoplay loop muted>
+   <video class="center" video id="myVideo" width="960" height="720" controls autoplay loop muted>
      <source src="https://tjdgus5160.github.io/KakaoTalk_20250420_022556182.mp4" type="video/mp4">
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
    <script>
-      document.getElementById('myVideo').playbackRate = 15; // 5배속 재생
+      document.getElementById('myVideo').playbackRate = 25; // 5배속 재생
    </script>
    
    <div id="container">
