--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               text-align:center }
 
       .video.center {
-         display: block;
+         display: flex;
          margin-left:auto;
          margin-right:auto;
       }
