--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
    <script>
-      document.getElementById('myVideo').playbackRate = 25; // 5배속 재생
+      document.getElementById('myVideo').playbackRate = 16; // 최대 16배속 재생
    </script>
    
    <div id="container">
