--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
    <title>박성현의 끄적끄적 상자</title>
+   <link rel="icon" href="https://tjdgus5160.github.io/Half-life.png" type="image/png">
    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
    <style type="text/css"> 
       html,body{width:100%;height:100%}
