--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       }
       li{list-style:none}
       
-      #container{width:80%; margin:0; box-sizing:border-box; font-size:30px;}
+      #container{width:80%; margin:0; box-sizing:border-box; }
       header{margin-top:20px;padding:20px;border:1px solid #000;background: transparent; border-width: 10px;}
       hgroup{overflow:hidden;padding-bottom:20px}
-      hgroup h1{float:left;font-size:18px;color:#000}
+      hgroup h1{float:left;font-size:24px;color:#000}
       hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
 
   /* 네비게이션 메뉴 */
