--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       article h3{font-size:16px}
       aside{float:right;width:163px;padding:10px;margin-top:15px;border:
                          1px solid #330000;line-height:20px ;background: transparent}
+      aside p { text-align:center; }
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
       footer{clear:both;padding:20px;border:1px solid #330000 ;background: transparent;
               text-align:center }
