--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       /* 기존 토글 관련 코드 제거 */
       section{float:left;width:518px;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
-              solid #330000;line-height:20px;background: transparent}
+              solid #330000;line-height:20px;background: transparent; border-width: 5px;}
       /* ... 나머지 스타일 유지 ... */
       section{float:left;width:518px;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
@@ -95,11 +95,11 @@
       article{margin-bottom:10px}
       article h3{font-size:16px}
       aside{float:right;width:163px;padding:10px;margin-top:15px;border:
-                         1px solid #330000;line-height:20px ;background: transparent}
+                         1px solid #330000;line-height:20px ;background: transparent; border-width: 5px;}
       aside p { text-align:center; }
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
       footer{clear:both;padding:20px;border:1px solid #330000 ;background: transparent;
-              text-align:center }
+              text-align:center; border-width: 3px; }
 
       .video-center {
          display: flex;
@@ -121,7 +121,7 @@
    <div id="container">
    <header>
       <hgroup>
-         <h1>너네가 세상을 아느냐<br></h1>
+         <h1>세상은 돈다<br></h1>
          <h2>by 박성현</h2>
       </hgroup>
    </header>
