--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
       /* 기존 토글 관련 코드 제거 */
       section{float:left;width:518px;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
-              solid #330000;line-height:20px;background: transparent; border-width: 5px;}
-      /* ... 나머지 스타일 유지 ... */
-      section{float:left;width:518px;margin-top:15px;
-             margin-bottom:20px;padding:20px;border:1px 
-              solid #330000;line-height:20px;background: transparent}
+              solid #330000;line-height:20px;background: transparent; border-width:5px;}
+
       article{margin-bottom:10px}
       article h3{font-size:16px}
       aside{float:right;width:163px;padding:10px;margin-top:15px;border:
@@ -110,7 +107,7 @@
   </style> 
 </head>
 <body> 
-   <video id="myVideo" width="960" height="720" controls autoplay loop muted>
+   <video id="myVideo" width="960" height="720" autoplay loop muted>
      <source src="https://tjdgus5160.github.io/KakaoTalk_20250420_022556182.mp4" type="video/mp4">
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
