--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         min-height: 100vh;
         display: grid;
         place-items: center;
+
+         background-image:url('https://tjdgus5160.github.io/Half-life.png');
+         background-repeat:repeat; /* 기본값:가로, 세로 모두 반복*/
+         background-size:80px 80px; /* 이미지 크기 조절*/
+         background-position:left top; /* 시작 위치*/ 
       }
       li{list-style:none}
       
@@ -91,7 +96,7 @@
 
       article{margin-bottom:10px}
       article h3{font-size:16px}
-      aside{float:right;width:163px;padding:10px;margin-top:15px;border:
+      aside{float:right;width:300px;padding:10px;margin-top:15px;border:
                          1px solid #330000;line-height:20px ;background: transparent; border-width: 5px;}
       aside p { text-align:center; }
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
