--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         display: grid;
         place-items: center;
 
-         background-image:url('https://tjdgus5160.github.io/Half-life.png');
+         background-image:url('https://tjdgus5160.github.io/brainrot.webp');
          background-repeat:repeat; /* 기본값:가로, 세로 모두 반복*/
-         background-size:80px 80px; /* 이미지 크기 조절*/
+         background-size:200px 200px; /* 이미지 크기 조절*/
          background-position:left top; /* 시작 위치*/ 
       }
       li{list-style:none}
       
       #container{width:80%; margin:0; box-sizing:border-box; }
-      header{margin-top:20px;padding:20px;border:1px solid #000;background: transparent; border-width: 10px; align-items:center;}
+      header{margin-top:20px;padding:20px;border:1px solid #fff;background: transparent; border-width: 10px; align-items:center;}
       hgroup{overflow:hidden;padding-bottom:20px}
-      hgroup h1{float:left;font-size:36px;color:#000}
-      hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
+      hgroup h1{float:left;font-size:36px;color:#fff}
+      hgroup h2{float:right;font-weight:normal;color:#fff;opacity:0.8}
 
   /* 네비게이션 메뉴 */
         nav {
