--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       li{list-style:none}
       
       #container{width:80%; margin:0; box-sizing:border-box; }
-      header{margin-top:20px;padding:20px;border:1px solid #fff;background: transparent; border-width: 10px; align-items:center;}
+      header{margin-top:20px;padding:20px;border:1px solid #000;background: #fff; border-width: 10px; align-items:center;}
       hgroup{overflow:hidden;padding-bottom:20px}
-      hgroup h1{float:left;font-size:36px;color:#fff}
-      hgroup h2{float:right;font-weight:normal;color:#fff;opacity:0.8}
+      hgroup h1{float:left;font-size:36px;color:#000}
+      hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
 
   /* 네비게이션 메뉴 */
         nav {
@@ -92,15 +92,15 @@
       /* 기존 토글 관련 코드 제거 */
       section{float:left;width:518px;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
-              solid #330000;line-height:20px;background: transparent; border-width:5px;}
+              solid #330000;line-height:20px;background: #fff; border-width:5px;}
 
       article{margin-bottom:10px}
       article h3{font-size:16px}
       aside{float:right;width:300px;padding:10px;margin-top:15px;border:
-                         1px solid #330000;line-height:20px ;background: transparent; border-width: 5px;}
+                         1px solid #330000;line-height:20px ;background: #fff; border-width: 5px;}
       aside p { text-align:center; }
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
-      footer{clear:both;padding:20px;border:1px solid #330000 ;background: transparent;
+      footer{clear:both;padding:20px;border:1px solid #330000 ;background: #fff;
               text-align:center; border-width: 3px; }
 
       .video-center {
