--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         display: grid;
         place-items: center;
 
-         background-image:url('https://tjdgus5160.github.io/brainrot.webp');
+         background-image:url('https://tjdgus5160.github.io/check_pattern.png');
          background-repeat:repeat; /* 기본값:가로, 세로 모두 반복*/
          background-size:50% 50%; /* 이미지 크기 조절*/
          background-position:left top; /* 시작 위치*/ 
