--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
       </article>
       <article>
          <h1> 할 수 있는거 </h1>
-         <p> Rydberg electromagnetic induced transparency spectroscopy </p>
-         <p> Saturation absorption spectroscopy </p>
-         <p> Python PID coding </p>
-         <p> optical transfer cavity (진행중) </p>
-         <p> Three-level density matrix calculation </p>
-         <p> Blender 3D (setup image, video) </p>
-         <p> html, css, javascript (진행중) </p>
-         <p> LabVIEW (진행중) </p>
-         <p> FPGA (예정) </p>
-         <p> IQM Spark 관리자 </p>
-         <p> IQM Spark 알고리즘 (하고싶다) </p>
+         <p> ▶ Rydberg electromagnetic induced transparency spectroscopy </p>
+         <p> ▶ Saturation absorption spectroscopy </p>
+         <p> ▶ Python PID coding </p>
+         <p> ▶ optical transfer cavity (진행중) </p>
+         <p> ▶ Three-level density matrix calculation </p>
+         <p> ▶ Blender 3D (setup image, video) </p>
+         <p> ▶ html, css, javascript (진행중) </p>
+         <p> ▶ LabVIEW (진행중) </p>
+         <p> ▶ FPGA (예정) </p>
+         <p> ▶ IQM Spark 관리자 </p>
+         <p> ▶ IQM Spark 알고리즘 (하고싶다) </p>
       </article>
       <article>
          <h1> 이제는 더 이상 물러날 곳이 없다 </h1>
