--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
    <!-- 수정된 네비게이션 구조 -->
    <nav id="side-menu">
       <ul>
-       <li><a href="#">자기소개</a></li>
-       <li><a href="#">해낸 것?</a></li>
-       <li><a href="#">좋아하는 리스트</a></li>
+       <li><a href="profile.html">자기소개</a></li>
+       <li><a href="project.html">해낸 것?</a></li>
+       <li><a href="list.html">좋아하는 리스트</a></li>
      </ul>
    </nav>
       <section> 
