--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       #side-menu {
         position: fixed;
         top: 0; left: -270px;
-        width: 250px;
+        width: 350px;
         height: 100vh;
         background: #fff;
         border-right: 5px solid #99ccff;
@@ -121,12 +121,16 @@
       #side-menu ul {
         list-style: none;
         padding: 0 30px;
+         display:flex;
+         flex-direction:row;
+         gap:30px;
+         justify-content:center;
       }
       #side-menu li {
         margin-bottom: 30px;
       }
       #side-menu a {
-        font-size: 22px;
+        font-size: 15px;
         color: #222;
         text-decoration: none;
         padding: 8px 0;
