--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           border-bottom: none;
         }
         .submenu li:hover {
-          background: #99ccff;
+          background: #fff;
         }
 
       #side-menu {
