--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
       #side-menu {
         position: fixed;
         top: 0; left: -270px;
-        width: 350px;
+        width: 250px;
         height: 100vh;
         background: #fff;
-        border-right: 5px solid #99ccff;
+        border-right: 5px solid #fff;
         box-shadow: 3px 0 16px rgba(0,0,0,0.06);
         z-index: 2000;
         padding-top: 100px;
@@ -106,7 +106,7 @@
         top: 40px;
         left: 40px;
         z-index: 2001;
-        background: #99ccff;
+        background: #fff;
         border: none;
         border-radius: 8px;
         padding: 12px 18px;
