--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         padding-top: 100px;
         transition: box-shadow 0.3s;
       }
-      #menu-btn {
+      #menu-btn #menu-icon {
+         display: inline-block;
         position: fixed;
         top: 40px;
         left: 40px;
@@ -113,10 +114,11 @@
         font-size: 28px;
         cursor: pointer;
         box-shadow: 2px 2px 8px rgba(0,0,0,0.07);
-        transition: background 0.2s;
+        transition: transform 0.2s;
       }
-      #menu-btn:hover {
-        background: #66b2ff;
+      #menu-btn:hover #menu-icon {
+         transform:rotate(90deg);
+        background: #0000ff;
       }
       #side-menu ul {
         list-style: none;
@@ -131,11 +133,11 @@
       }
       #side-menu a {
         font-size: 15px;
-        color: #222;
+        color: #000;
         text-decoration: none;
         padding: 8px 0;
         display: block;
-        border-bottom: 1px solid #e0e0e0;
+        border-bottom: 1px solid #000000;
         transition: color 0.2s;
       }
       #side-menu a:hover {
