--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       }
       #menu-btn:hover #menu-icon {
          transform:rotate(90deg);
-        background: #0000ff;
+        background: #ffffff;
       }
       #side-menu ul {
         list-style: none;
