--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
       }
       #menu-btn:hover {
          background: #000;
-         color: #0f0fff;
+         color: transparent;
       }
       
       #menu-btn:hover #menu-icon {
          transform:rotate(90deg);
-        background: #0f0fff;
+        background: transparent;
       }
       #side-menu ul {
         list-style: none;
