--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       #menu-btn #menu-icon {
          display:inline-block;
          transition:transform 0.3s, color 0.3s;
-         color:#000;
+         color:#fff;
       }
       #menu-btn:hover {
          background: #000;
