--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       
       #menu-btn:hover #menu-icon {
          transform:rotate(90deg);
-        background: transparent;
+        color:#fff;
       }
       #side-menu ul {
         list-style: none;
