--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         transition: color 0.2s;
       }
       #side-menu a:hover {
-        color: #0077cc;
-        border-bottom: 2px solid #99ccff;
+        color: #000000;
+        border-bottom: 2px solid #000000;
       }
 
 
