--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@
          align-items:center; /*세로 중앙*/
          height:10vh; /*화면 전체 높이*/
       }
+      
+      #timer {
+        font-size: 24px;
+        font-family: monospace;
+        padding: 10px;
+        background: #f0f0f0;
+        border-radius: 5px;
+      }
+
   </style> 
 </head>
 <body> 
@@ -203,6 +212,11 @@
       width:100vw; height:100vh; background:rgba(0,0,0,0.18); z-index:1999;">
       
    </div>
+
+   <div id="timer">
+     <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
+   </div>
+
 
 
    <!-- 수정된 네비게이션 구조 -->
@@ -287,6 +301,36 @@ document.addEventListener('keydown', (e) => {
 });
 </script>
 
+<script>
+// 1. 방문 시간 기록 (페이지 로드 시)
+if (!localStorage.getItem('visitTime')) {
+  localStorage.setItem('visitTime', new Date().getTime());
+}
+
+// 2. 타이머 업데이트 함수
+function updateTimer() {
+  const visitTime = parseInt(localStorage.getItem('visitTime'));
+  const currentTime = new Date().getTime();
+  const elapsedTime = currentTime - visitTime;
+
+  // 시간 계산
+  const hours = Math.floor(elapsedTime / (1000 * 60 * 60));
+  const minutes = Math.floor((elapsedTime % (1000 * 60 * 60)) / (1000 * 60));
+  const seconds = Math.floor((elapsedTime % (1000 * 60)) / 1000);
+
+  // 두 자리 숫자로 표시
+  document.getElementById('hours').textContent = hours.toString().padStart(2, '0');
+  document.getElementById('minutes').textContent = minutes.toString().padStart(2, '0');
+  document.getElementById('seconds').textContent = seconds.toString().padStart(2, '0');
+}
+
+// 3. 1초마다 타이머 업데이트
+setInterval(updateTimer, 1000);
+
+// 4. 페이지 갱신 시에도 계속 유지
+window.addEventListener('load', updateTimer);
+
+</script>
 
 </body>
 </html>
